# tinypt

./: .config  .gitignore  CONTEXT.md  Cargo.toml  README.md
docs/adr/: 0001-keep-renderconfig-flat.md  0002-mitsuba-xml-scene-format.md
sample/: cornell.xml  default.xml  env_scene.xml  mesh.xml
src/: aces.rs  bvh.rs  checkpoint.rs  config.rs  constants.rs  denoise.rs  env.rs  exr.rs  geometry.rs  hdr.rs  integrator.rs  lib.rs  main.rs  material.rs  math.rs  mitsuba.rs  obj_loader.rs  output.rs  ray.rs  render.rs  rng.rs  scene.rs  task.rs  transform.rs  world.rs
