[package]
name = "tinypt"
version = "0.1.0"
edition = "2024"

[features]
default = ["oidn"]
oidn = ["dep:oidn"]

[dependencies]
crossbeam = "0.8"
crossbeam-channel = "0.5"
image = { version = "0.25", features = ["exr"] }
exr = "1.7"
oidn = { version = "2.3", optional = true }

[profile.release]
opt-level = 3
lto = "fat" 
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
debug-assertions = false
overflow-checks = false
incremental = false

# Profiling-friendly build (keeps debug info and frame pointers, disables stripping/LTO).
[profile.profiling]
inherits = "release"
debug = true
strip = "none"
lto = "off"
codegen-units = 1
